# discord_timetable

./: .env  .env.example  .gitignore  Cargo.toml  README.md  courses.db
init/: initdb.sql
src/: commands.rs  database_utils.rs  interaction_handlers.rs  main.rs  utils.rs
