[package]
name = "discord_timetable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }