[package]
name = "discord_timetable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
sqlx-macros = "0.7"

serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "model", "rustls_backend",] }
poise = { version = "0.5.6" }

comfy-table = { version = "7" }

chrono = "0.4"